--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,38 +7,26 @@
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guid_hor_0.75"
+        android:id="@+id/guid_hor_0.5"
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.75" />
+        app:layout_constraintGuide_percent="0.5" />
 
     <SurfaceView
         android:id="@+id/view_surface"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/guid_hor_0.75" />
+        app:layout_constraintBottom_toTopOf="@+id/guid_hor_0.5" />
 
-    <Button
-        android:id="@+id/btn_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="start"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_surface"
-        android:layout_marginStart="100px"
-        android:layout_marginTop="10px"/>
-
-    <Button
-        android:id="@+id/btn_stop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="stop"
-        app:layout_constraintStart_toStartOf="@+id/btn_start"
-        app:layout_constraintTop_toBottomOf="@+id/btn_start"
-        android:layout_marginTop="10dp"/>
+    <com.lyzirving.opengl.assemble.LineTestView
+        android:id="@+id/view_line_test"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guid_hor_0.5"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
