--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:textAllCaps="false"
+        android:enabled="false"
         android:text="Line"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
