--- a/app/src/main/res/layout/activity_scene.xml
+++ b/app/src/main/res/layout/activity_scene.xml
@@ -26,4 +26,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/guid_hor_0.85" />
 
+    <ImageView
+        android:id="@+id/iv_model_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/model_normal"/>
+
+    <ImageView
+        android:id="@+id/iv_camera_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintStart_toEndOf="@+id/iv_model_icon"
+        app:layout_constraintTop_toTopOf="@+id/iv_model_icon"
+        android:layout_marginStart="10dp"
+        android:src="@drawable/camera_normal"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
